--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -25,6 +25,8 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootswatch/dist/minty/bootstrap.css",
               "src/styles.css"
             ],
             "scripts": []
